# llm_negotiation

./: .gitignore  .pre-commit-config.yaml  README.md  analysis_ipd.ipynb  analysis_training.ipynb  analysis_trust_and_split.ipynb  basic_render.py  current_run.out  dedestyle.mplstyle  download_hf.bash  faceoff.py  generate_and_train.py  generate_jobs.sh  generate_jobs_aa.sh  generate_jobs_seeds.sh  home  job_0.sh  job_1.sh  job_2.sh  job_3.sh  new_requirements.txt  nohup.out  plots.ipynb  plotstyle.mplstyle  pyproject.toml  pythonprintcrash.py  render.py  requirements.txt  results  reward_evolution.ipynb  run.bash  run.py  run_commands.bash  run_nohup.py  stats.py  test_style.py  testmodel.py  todo.txt  token_entropy_terms_tabular_render.csv  training_analysis.ipynb  (+3 more)
conf/: 16rounds.yaml  config.yaml  default.yaml  dond.yaml  dond_mgpu.yaml  messages.yaml  ultimatum.yaml
configs/: adv_align.yaml  base.yaml  benchmark_nego.yaml  bob_openai.yaml  deal_no_deal.yaml  debug.yaml  debug_dond.yaml  debug_ipd.yaml  debug_nego.yaml  debug_tas.yaml  debug_tas_rps.yaml  default.yaml  defaults.yaml  dond.yaml  dond_baseline_test.yaml  dond_economical.yaml  dond_test.yaml  gpt_vs_qwen.yaml  human_alice.yaml  ipd.yaml  ipd_ad_align.yaml  ipd_covert.yaml  ipd_covert_adv_align.yaml  ipd_covert_adv_align_temp1.0.yaml  ipd_covert_adv_align_temp1.0_clip_firstcoop.yaml  ipd_covert_adv_align_temp1.0_clip_firstcoop_stochasticrounds.yaml  ipd_covert_adv_align_temp1.0_clip_usecurrstep.yaml  ipd_covert_adv_align_temp1.0_firstcoop.yaml  ipd_covert_adv_align_temp1.0_fixedrounds30_gamma0.9.yaml  (+100 more)
(+1007 files in other folders)
