[project]
name = "mllm"
version = "0.1.0"
description = "Multi-agent reinforcement learning for large language models"
authors = [
  { name = "Dereck Piche", email = "pichedereck@gmail.com"},
  { name = "Muqeeth Mohammed" },
  { name = "Uday Kapoor" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "hydra-core",
  "torch",
  "datasets",
  "transformers",
  "trl",
  "peft",
  "vllm",
  "matplotlib",
  "tensorboard",
  "diplomacy",
  "optimum",
  "auto-gptq",
  "backoff",
  "flash-attn"
]

[project.urls]
Homepage = "https://github.com/dereckpiche/llm_negotiation"
Repository = "https://github.com/dereckpiche/llm_negotiation"
Issues = "https://github.com/dereckpiche/llm_negotiation/issues"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mllm"]
package-dir = { "mllm" = "mllm" }